<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/default_name"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="34sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/event_layout"
        android:gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/str"
            android:background="#30ffffff"
            android:hint="@string/string_attribute"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:drawableStart="@drawable/baseline_text_fields_24"
            android:drawablePadding="20dp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number"
            android:background="#30ffffff"
            android:hint="@string/number_attribute"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:drawableStart="@drawable/baseline_numbers_24"
            android:drawablePadding="20dp"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />


    </LinearLayout>

    <Button
        android:layout_alignStart="@+id/event_layout"
        android:layout_alignEnd="@id/event_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/send_event"
        android:text="@string/send_event"
        android:layout_centerInParent="true"
        android:layout_below="@+id/event_layout"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:id="@+id/sign_out"
        android:text="@string/sign_out"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>